workloads.tf
# ==========================================
# 1. SECURITY GROUPS (Zero Trust Firewalls)
# ==========================================

# Web Server Security Group
resource "aws_security_group" "web_sg" {
  name        = "Web-Server-SG"
  description = "Allow SSH and HTTP traffic"
  vpc_id      = aws_vpc.main.id

  # Allow SSH (Port 22) from my IP only (Security Best Practice)
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] ## use my specific IP (-.-.-.-/32) to protect anyone to connect my server (especially protecting bruth-force attack) # Use default ip (0.0.0.0/0) while development
  }

  # Allow HTTP (Port 5000) so that it can see my Flask app
  ingress {
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Anyone can connect <-- I changed from "[aws_vpc.main.cidr_block]" which was locked only from vpc to connect
  }

  # Allow all outbound traffic (so it can reach the internet via NAT)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Database Security Group (Highly Restricted!)
resource "aws_security_group" "db_sg" {
  name        = "Database-SG"
  description = "Allow MySQL traffic strictly from Web Server"
  vpc_id      = aws_vpc.main.id

  # ONLY accept traffic on port 3306 from the Web Server Security Group
  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.web_sg.id]
  }
}

# ==========================================
# 2. EC2 INSTANCE (The Web Server)
# ==========================================

# Dynamically grab the latest Amazon Linux 2023 Image
data "aws_ami" "amazon_linux" {
  most_recent = true
  owners      = ["amazon"]
  filter {
    name   = "name"
    values = ["al2023-ami-2023.*-x86_64"]
  }
}

resource "aws_instance" "web" {
  ami                    = data.aws_ami.amazon_linux.id
  instance_type          = "t2.micro"
  subnet_id              = aws_subnet.public.id # putting server in the public subnet so it can be accessed from the internet
  key_name               = "my-project-key"     # key pair for SSH access
  vpc_security_group_ids = [aws_security_group.web_sg.id]

  user_data = <<-EOF
              #!/bin/bash
              # 1. Update and install software
              dnf update -y
              dnf install python3-pip git -y

              # 2. Install Python libraries
              pip3 install mysql-connector-python flask pymysql

              # 3. Auto-clone files from GitHiub
              cd /home/ec2-user
              git clone https://github.com/AyeMinKhant023/DE-Project-App.git

              # Ensure ec2-user owns the cloned files
              chown -R ec2-user:ec2-user /home/ec2-user/DE-Project-App
            EOF

  tags = {
    Name = "Web-Server-Phase-1"
  }
}

# ==========================================
# 3. RDS INSTANCE (The Database)
# ==========================================

# Group the two private subnets together for the Database
resource "aws_db_subnet_group" "db_subnet_group" {
  name       = "de-project-db-group"
  subnet_ids = [aws_subnet.private.id, aws_subnet.private_2.id]
}

resource "aws_db_instance" "database" {
  allocated_storage      = 20
  engine                 = "mysql"
  engine_version         = "8.0"
  instance_class         = "db.t3.micro"
  db_name                = "DEProjectDB"
  username               = "admin"
  password               = var.db_password # Using the sensitive variable for the password
  db_subnet_group_name   = aws_db_subnet_group.db_subnet_group.name
  vpc_security_group_ids = [aws_security_group.db_sg.id]
  publicly_accessible    = false
  skip_final_snapshot    = true # Makes it easy to delete for your project
}
